refactor: remove remaining deprecated API usage